[package]
name = "imgrszr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.0", features = ["derive"] }
image = "0.24.7"
rustface = "0.1.7"  # Use the latest version or a compatible version.
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3.17"
rayon = "1.5"
indicatif = { version = "0.17.6", features = ["rayon"] }

